Update to handle passed dates